src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Privacy_Home_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the Home Phone field for internal use only?</inlineHelpText>
        <label>Privacy - Home Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Privacy_Mobile_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the Mobile Phone field for internal use only?</inlineHelpText>
        <label>Privacy - Mobile Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Privacy_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the phone for internal use only?</inlineHelpText>
        <label>Privacy - Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <inlineHelpText>Please select one or more categories.  Data from this field is used for aggregate demographic statistics, and is not used for admissions decisions.</inlineHelpText>
        <label>Race</label>
        <picklist>
            <picklistValues>
                <fullName>American Indian and Alaska Native</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black or African American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native Hawaiian / Pacific Islander</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>RapLeaf__RapLeafInfo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RapLeafInfo</label>
        <referenceTo>RapLeaf__RapLeafInfo__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Speaker_Rating__c</fullName>
        <description>How the speaker was rated on a scale of one to ten.</description>
        <inlineHelpText>How the speaker was rated on a scale of one to ten.</inlineHelpText>
        <label>Speaker Rating</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Speaker_Type__c</fullName>
        <description>What kind of speaker the person is.</description>
        <inlineHelpText>What kind of speaker the person is.</inlineHelpText>
        <label>Speaker Type</label>
        <picklist>
            <picklistValues>
                <fullName>All Purpose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC Congress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC Speakers List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgetown Speakers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JSA Keynote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Symposium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Spouse_Name__c</fullName>
        <label>Spouse Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <description>Follows a person’s full name and provides additional information about the person. Post-nominal letters indicate that the individual holds a position, educational degree, accreditation, office or honor.</description>
        <inlineHelpText>Follows a person’s full name and provides additional information about the person. Post-nominal letters indicate that the individual holds a position, educational degree, accreditation, office or honor.</inlineHelpText>
        <label>Suffix</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summer_School_Attendee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Summer School Attendee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Summer_School_Campus__c</fullName>
        <label>Summer School Campus</label>
        <picklist>
            <picklistValues>
                <fullName>American University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beijing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California State University, Sacramento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgetown University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mills College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montezuma Mountain School for Boys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northwestern University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Princeton University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stanford University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University of California, Berkeley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University of California, Davis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University of California, Santa Barbara</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University of California, Santa Cruz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University of Southern California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University of Texas, Austin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yale University</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summer_School_Year__c</fullName>
        <label>Summer School Year</label>
        <picklist>
            <picklistValues>
                <fullName>1941</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1942</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1943</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1944</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1945</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1946</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1947</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1948</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1949</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1950</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1951</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1952</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1953</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1954</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1955</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1956</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1957</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1958</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1959</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1960</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1961</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1962</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1963</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1964</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1965</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1966</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1967</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1968</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1969</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1970</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summer_Stage__c</fullName>
        <label>Summer Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Application Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I: Intent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I: Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S: Serious</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S: Stuck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T: Teacher Rec Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C: Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Complete__c</fullName>
        <label>Survey Complete</label>
        <picklist>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Symposium_Institute_Attendee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Symposium/Institute Attendee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Taxes_Paid_by_Chapter__c</fullName>
        <formula>High_School__r.Taxes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taxes Paid by Chapter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>University_Graduation_Year__c</fullName>
        <label>University Graduation Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>University_Undergraduate__c</fullName>
        <label>University (Undergraduate)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>University__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>University Link</label>
        <referenceTo>University__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used to indicate that the contact email has been activated / verified before providing external access to the portal.</description>
        <inlineHelpText>Field used to indicate that the contact email has been activated / verified before providing external access to the portal.</inlineHelpText>
        <label>Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volunteer_Interests__c</fullName>
        <label>Volunteer Interests</label>
        <picklist>
            <picklistValues>
                <fullName>Event support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundraising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probono services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Management</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ZIP_Data__c</fullName>
        <formula>HYPERLINK(&quot;http://zipskinny.com/index.php?zip=&quot; &amp; LEFT(MailingPostalCode, 5), &quot;ZIP Data&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZIP Data</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Prospect Insight Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Prospect Insight campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Prospect Insight Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Prospect Insight Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Prospect Insight created date represents the date and time at which the Prospect record was created in Prospect Insight. This will often differ from your Salesforce.com created date.</description>
        <label>Prospect Insight Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <label>Prospect Insight First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Prospect Insight grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Prospect Insight system and cannot be edited in Salesforce.com.</description>
        <label>Prospect Insight Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <label>Prospect Insight Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Prospect Insight Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Prospect Insight score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Prospect Insight system and cannot be edited in Salesforce.com.</description>
        <label>Prospect Insight Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect&apos;s profile within Prospect Insight. From there you can view his or her complete activity history. This URL is generated within the Prospect Insight system and cannot be edited in Salesforce.com.</description>
        <label>Prospect Insight URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_term__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Google_Buyer_Id__c</fullName>
        <inlineHelpText>Id assigned to the contact by Google.</inlineHelpText>
        <label>Google Buyer Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pymt__PayPal_Payer_Id__c</fullName>
        <inlineHelpText>Id assigned by PayPal to this contact.</inlineHelpText>
        <label>PayPal Payer Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>High_School__c</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>JSA_Role__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>All_Board_Members</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <label>All Board Members</label>
    </listViews>
    <listViews>
        <fullName>Alumni</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <columns>High_School_Graduation_Year__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>alum</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Alumnus</value>
        </filters>
        <label>Alumni</label>
    </listViews>
    <listViews>
        <fullName>Linvio_New_Contacts_Created</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>contains</operation>
            <value>PaymentConnect</value>
        </filters>
        <label>Linvio New Contacts Created</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Alumnus</fullName>
        <active>true</active>
        <description>Use this record type for JSA alumni</description>
        <label>Alumnus</label>
    </recordTypes>
    <recordTypes>
        <fullName>Educator</fullName>
        <active>true</active>
        <description>Use this record type for teachers, advisors, and counselors</description>
        <label>Educator</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <description>Use this record type for donors, parents, trustees, and other contacts who are not alumni</description>
        <label>Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>Student</fullName>
        <active>true</active>
        <description>Use this record type for current high school students</description>
        <label>Student</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Email_must_be_unique</fullName>
        <active>false</active>
        <description>Cannot add new contact with an email address that is already associated with a contact.</description>
        <errorConditionFormula>ISNULL(Email)</errorConditionFormula>
        <errorMessage>The email address you entered is already in use for another Contact.  Please correct the email address, or double check that a contact for this person has not already been created.</errorMessage>
    </validationRules>
</CustomObject>